--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -29,5 +29,5 @@ $font_path: '~@/assets/static/fonts/';
 }
 
 
-$knockout: 'Knockout-Junior', sans-serif;
-$knockout_feather: 'Knockout-Feather', sans-serif;
+$knockout: 'Knockout Junior', sans-serif;
+$knockout_feather: 'Knockout Feather', sans-serif;
