Más diseño caray!

--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -1,3 +1,4 @@
+$fondo_bienvenido: #06938E;
 
 $blanco: #fff;
 $flecha_regresar: #468460;
@@ -14,6 +15,7 @@ $boton_agregar: #7b5011;
 $boton_agregar_sombra: #533605;
 $boton_gris: #949494;
 $boton_gris_sombra: #4f504f;
+
 
 $font_path: '~@/assets/static/fonts/';
 
