--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,9 +1,11 @@
 @font-face {
 	font-family: 'Knockout Junior';
 	src: url("../assets/static/fonts/knockout-htf-29-junior-liteweight-1361516762.ttf") format("truetype");
+	src: url("../assets/static/fonts/Knockout HTF29JuniorLiteweight Regular.otf") format("opentype");
 }
 
 @font-face {
 	font-family: 'Knockout Feather';
 	src: url("../assets/static/fonts/knockout-htf-48-featherweight-1361516727.ttf") format("truetype");
+	src: url("../assets/static/fonts/Knockout HTF48Featherweight Regular.otf") format("opentype");
 }
